--- a/settings.html
+++ b/settings.html
@@ -1,53 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Switcher</title>
-    <style>
-        /* Keep the existing styling */
-    </style>
-</head>
-<body>
-    <div id="header">
-        <h1>Theme Switcher</h1>
-    </div>
-    <div style="text-align: center;">
-        <div class="dropdown">
-            <button class="dropbtn">Select Theme</button>
-            <div class="dropdown-content">
-                <button onclick="setValue('black', 'theme')">Black Theme</button>
-                <button onclick="setValue('white', 'theme')">White Theme</button>
-                <button onclick="setValue('pink', 'theme')">Pink Theme</button>
-                <button onclick="setValue('blue', 'theme')">Blue Theme</button>
-                <button onclick="setValue('red', 'theme')">Red Theme</button>
-            </div>
-        </div>
-    </div>
-    <script>
-        // Function to set a cookie
-        function setCookie(name, value, daysToExpire) {
-            var expires = "";
-            if (daysToExpire) {
-                var date = new Date();
-                date.setTime(date.getTime() + (daysToExpire * 24 * 60 * 60 * 1000));
-                expires = "; expires=" + date.toUTCString();
-            }
-            document.cookie = name + "=" + value + expires + "; path=/";
-        }
+<html>
+<script>
+	// Function to set a cookie
+function setCookie(name, value, daysToExpire) {
+    var expires = "";
+    if (daysToExpire) {
+        var date = new Date();
+        date.setTime(date.getTime() + (daysToExpire * 24 * 60 * 60 * 1000));
+        expires = "; expires=" + date.toUTCString();
+    }
+    document.cookie = name + "=" + value + expires + "; path=/";
+}
 
-        // Example usage
-        function setValue(value, cookie) {
-            setCookie(cookie, value, 365);
-            applyTheme(value);
+// Function to get a cookie by name
+function getCookie(name) {
+    var nameEQ = name + "=";
+    var cookies = document.cookie.split(';');
+    for(var i = 0; i < cookies.length; i++) {
+        var cookie = cookies[i];
+        while (cookie.charAt(0) == ' ') {
+            cookie = cookie.substring(1, cookie.length);
         }
+        if (cookie.indexOf(nameEQ) == 0) {
+            return cookie.substring(nameEQ.length, cookie.length);
+        }
+    }
+    return null;
+}
 
-        // Function to apply the selected theme
-        function applyTheme(theme) {
-            // You can customize this function to apply the theme styles
-            // For simplicity, let's just change the background color
-            document.body.style.backgroundColor = theme;
-        }
-    </script>
-</body>
+// Example usage
+function setValue(value, cookie) {
+	setCookie(cookie, value, 365)
+}
+
+// To retrieve the value later
+</script>
+<button onclick="setValue('black', 'theme')">setThemeBlack</button>
+<button onclick="setValue('white', 'theme')">setThemeWhite</button>
+<button onclick="setValue('pink', 'theme')">setThemePink</button>
+<button onclick="setValue('blue', 'theme')">setThemeBlue</button>
+<button onclick="setValue('red', 'theme')">setThemeRed</button>
 </html>
