--- a/settings.html
+++ b/settings.html
@@ -95,6 +95,7 @@ function setValue(value, cookie) {
 
 // To retrieve the value later
 </script>
+<h1>Theme Switcher</h1>
 <button onclick="setValue('black', 'theme')">setThemeBlack</button>
 <button onclick="setValue('white', 'theme')">setThemeWhite</button>
 <button onclick="setValue('pink', 'theme')">setThemePink</button>
