--- a/settings.html
+++ b/settings.html
@@ -95,10 +95,12 @@ function setValue(value, cookie) {
 
 // To retrieve the value later
 </script>
-<h1>Theme Switcher</h1>
-<button onclick="setValue('black', 'theme')">setThemeBlack</button>
-<button onclick="setValue('white', 'theme')">setThemeWhite</button>
-<button onclick="setValue('pink', 'theme')">setThemePink</button>
-<button onclick="setValue('blue', 'theme')">setThemeBlue</button>
-<button onclick="setValue('red', 'theme')">setThemeRed</button>
+<h1 style="text-align: center;">Theme Switcher</h1><select onchange="setValue(this.value, 'theme')">
+  <option value="black">Set Theme Black</option>
+  <option value="white">Set Theme White</option>
+  <option value="pink">Set Theme Pink</option>
+  <option value="blue">Set Theme Blue</option>
+  <option value="red">Set Theme Red</option>
+</select>
+
 </html>
