--- a/settings.html
+++ b/settings.html
@@ -95,12 +95,33 @@ function setValue(value, cookie) {
 
 // To retrieve the value later
 </script>
-<h1 style="text-align: center;">Theme Switcher</h1><select onchange="setValue(this.value, 'theme')">
+<h1 style="text-align: center;">Theme Switcher</h1>
+<style>
+  .theme-select {
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+  }
+
+  .theme-select:hover {
+    background-color: #e0e0e0;
+  }
+
+  .theme-select:focus {
+    outline: none;
+    border-color: #007bff;
+  }
+</style>
+
+<select class="theme-select" onchange="setValue(this.value, 'theme')">
   <option value="black">Set Theme Black</option>
   <option value="white">Set Theme White</option>
   <option value="pink">Set Theme Pink</option>
   <option value="blue">Set Theme Blue</option>
   <option value="red">Set Theme Red</option>
 </select>
+
 
 </html>
