--- a/settings.html
+++ b/settings.html
@@ -101,7 +101,8 @@ function setValue(value, cookie) {
     padding: 5px;
     font-size: 16px;
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: black;
+    color: white;
     border: 1px solid #ccc;
   }
 
