--- a/settings.html
+++ b/settings.html
@@ -103,7 +103,7 @@ function setValue(value, cookie) {
     border-radius: 5px;
     background-color: black;
     color: white;
-    border: 1px solid: yellow;
+    border: 1px solid yellow;
   }
 
   .theme-select:hover {
