--- a/settings.html
+++ b/settings.html
@@ -107,7 +107,7 @@ function setValue(value, cookie) {
   }
 
   .theme-select:hover {
-    background-color: #e0e0e0;
+    background-color: linear-gradient(45deg, #FFD700, #000);
   }
 
   .theme-select:focus {
