--- a/settings.html
+++ b/settings.html
@@ -98,21 +98,30 @@ function setValue(value, cookie) {
 <h1 style="text-align: center;">Theme Switcher</h1>
 <style>
   .theme-select {
-    padding: 5px;
-    font-size: 16px;
+      display: none;
+    position: absolute;
+    background: linear-gradient(45deg, #FFD700, #000);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
     border-radius: 5px;
-    background-color: black;
-    color: white;
-    border: 5px solid yellow;
+    overflow: hidden;
   }
 
   .theme-select:hover {
-    background-color: linear-gradient(45deg, #FFD700, #000);
+      color: white;
+    background-color: black;
+    content-align: center;
+    padding: 10px 20px;
+    text-decoration: none;
+    display: block;
+    border: none;
+    font-size: 16px;
+    margin: 10 auto; /* Center the buttons horizontally */
   }
 
   .theme-select:focus {
-    outline: none;
-    border-color: #007bff;
+      background-color: #ddd;
+
   }
 </style>
 
