--- a/settings.html
+++ b/settings.html
@@ -58,25 +58,22 @@
         }
 
         .theme-select {
-            display: none;
-            position: absolute;
+            display: inline-block;
             background: linear-gradient(45deg, #FFD700, #000);
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-            z-index: 1;
             border-radius: 5px;
             overflow: hidden;
+            color: white;
+            padding: 10px;
+            font-size: 16px;
+            margin-top: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
 
         .theme-select:hover {
-            color: white;
-            background-color: black;
-            content-align: center;
-            padding: 10px 20px;
-            text-decoration: none;
-            display: block;
-            border: none;
-            font-size: 16px;
-            margin: 10 auto; /* Center the buttons horizontally */
+            color: black;
+            background-color: #FFD700;
         }
 
         .theme-select:focus {
