--- a/settings.html
+++ b/settings.html
@@ -37,7 +37,7 @@
 
         .button_navigation {
             background-color: black;
-            border: 2px solid #FFD700;
+            border: 2px solid yellow;
             padding: 15px 32px;
             text-align: center;
             color: white;
