--- a/settings.html
+++ b/settings.html
@@ -51,7 +51,7 @@
         }
 
         .button_navigation:hover {
-            background: linear-gradient(45deg, #000, #FFD700);
+            background-color: linear-gradient(45deg, #000, #FFD700);
             color: white;
             transform: scale(1.05);
             box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
