--- a/header.html
+++ b/header.html
@@ -69,6 +69,7 @@
             <div class="dropdown_content">
                 <button onclick="goto('games')" class="button_navigation">Games</button>
                 <button onclick="goto('star')" class="button_navigation">Star</button>
+                <button onclick="goto('interstellar')" class="button_navigation">Star on RCKSTR</button>
             </div>
         </div>
 
