--- a/header.html
+++ b/header.html
@@ -70,6 +70,7 @@
                 <button onclick="goto('games')" class="button_navigation">Games</button>
                 <button onclick="goto('star')" class="button_navigation">Star</button>
                 <button onclick="goto('interstellar')" class="button_navigation">Star on RCKSTR</button>
+                <button onclick="goto('emulator')" class="button_navigation">Emulators</button>
             </div>
         </div>
 
