--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+         <body>
+     <div id="header"></div> <!-- Placeholder for header content -->
+    <script src="loadContent.js"></script>
+    <script src="./scripts/navigation.js"></script>
+     </body>
     <head>
-        <title>EmulatorJS Demo</title>
+        <title>EmulatorJS</title>
         <link rel = icon href = docs/favicon.ico sizes = "16x16 32x32 48x48 64x64" type = image/vnd.microsoft.icon>
         <meta name = viewport content = "width = device-width, initial-scale = 1">
         <style>
