--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -24,12 +24,12 @@
             }
 
             #box {
-                color: #aaa;
+                color: white;
                 height: 20em;
                 width: 30em;
                 max-width: 80%;
                 max-height: 80%;
-                background-color: #333;
+                background-color: black;
                 border-radius: 0.4em;
                 border: 2px solid #555;
                 position: relative;
@@ -43,8 +43,8 @@
             }
 
             #box:hover, #box[drag] {
-                border-color: #38f;
-                color: #ddd
+                border-color: yellow;
+                color: linear-gradient(45deg, #FFD700, #000);
             }
 
             #input {
