--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -7,7 +7,7 @@
         <style>
              body, html {
                 height: 100%;
-                background-color: black;
+                background-color: linear-gradient(45deg, #FFD700, #000);
                 color: white;
             }
 
@@ -29,7 +29,7 @@
                 width: 30em;
                 max-width: 80%;
                 max-height: 80%;
-                background-color: black;
+                background-color: yellow;
                 border-radius: 0.4em;
                 border: 2px solid #555;
                 position: relative;
