--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -29,7 +29,7 @@
                 width: 30em;
                 max-width: 80%;
                 max-height: 80%;
-                background-color: yellow;
+                background-color: linear-gradient(45deg, #FFD700, #000);
                 border-radius: 0.4em;
                 border: 2px solid #555;
                 position: relative;
@@ -103,7 +103,7 @@
 
     <body>
         <div id="top">
-            <h1>EmulatorJS Demo</h1>
+            <h1>EmulatorJS on RCKSTR</h1>
             <img src="docs/Logo-light.png" alt="Logo" class="logo">
         </div>
         <div id = box>
