--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -5,55 +5,93 @@
     <link rel="icon" href="docs/favicon.ico" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-    body, html {
-        height: 100%;
-        background: linear-gradient(45deg, #FFD700, #000); /* Gradient for page background */
-        color: white;
-    }
+        body, html {
+            height: 100%;
+            background-image: linear-gradient(45deg, #FFD700, #000);
+            color: white;
+        }
 
-    body {
-        margin: 0;
-        overflow: hidden;
-        backdrop-filter: blur(20px); /* Adds a 20px blur effect to the page background */
-    }
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
 
-    #box {
-        color: white;
-        height: 20em;
-        width: 30em;
-        max-width: 80%;
-        max-height: 80%;
-        background: none; /* Clear background for the box */
-        border-radius: 0.4em;
-        border: 2px solid #555;
-        position: relative;
-        flex-direction: column;
-        transition-duration: 0.2s;
-        overflow: hidden;
-        font-family: monospace;
-        font-weight: bold;
-        font-size: 20px;
-        margin: 5px;
-        position: relative; /* Make the box position relative */
-    }
+        body, #box, #top {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
 
-    /* Pseudo-element for creating the gradient following the mouse */
-    #box::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: radial-gradient(circle at center, #FFD700, #000); /* Initial gradient */
-        transition: background-image 0.3s ease; /* Smooth transition for gradient change */
-        pointer-events: none; /* Ensure pseudo-element doesn't interfere with mouse events on the box */
-    }
+        #box {
+            color: white;
+            height: 20em;
+            width: 30em;
+            max-width: 80%;
+            max-height: 80%;
+            background-image: linear-gradient(45deg, #FFD700, #000);
+            border-radius: 0.4em;
+            border: 2px solid #555;
+            position: relative;
+            flex-direction: column;
+            transition-duration: 0.2s;
+            overflow: hidden;
+            font-family: monospace;
+            font-weight: bold;
+            font-size: 20px;
+            margin: 5px;
+        }
 
-    #box:hover::before {
-        background-image: radial-gradient(circle at center, #FFD700, #000); /* Gradient following mouse */
-    }
-</style>
+        #box:hover {
+            border-color: yellow;
+        }
+
+        #input {
+            cursor: pointer;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+        }
+
+        #display {
+            width: 100%;
+            height: 100%;
+        }
+
+        select, button {
+            padding: 0.6em 0.4em;
+            margin: 0.5em;
+            width: 15em;
+            max-width: 100%;
+            font-family: monospace;
+            font-weight: bold;
+            font-size: 16px;
+            background-color: #444;
+            color: #aaa;
+            border-radius: 0.4em;
+            border: 1px solid #555;
+            cursor: pointer;
+            transition-duration: 0.2s;
+        }
+
+        select:hover, button:hover {
+            background-color: #666;
+            color: #ddd;
+        }
+
+        .logo {
+            width: 130px;
+            height: 130px;
+            filter: drop-shadow(0 0 10px white);
+        }
+
+        #top {
+            margin: 5px;
+        }
+    </style>
 </head>
 <body>
     <div id="header"></div> <!-- Placeholder for header content -->
