--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -31,7 +31,7 @@
             max-height: 80%;
             background-image: linear-gradient(45deg, #FFD700, #000);
             border-radius: 0.4em;
-            border: 2px solid #555;
+            border: 1px solid white;
             position: relative;
             flex-direction: column;
             transition-duration: 0.2s;
@@ -42,9 +42,7 @@
             margin: 5px;
         }
 
-        #box:hover {
-            border-color: yellow;
-        }
+
 
         #input {
             cursor: pointer;
