--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -16,6 +16,41 @@
             overflow: hidden;
         }
 
+                .button_container {
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 25px 25px;
+            background: linear-gradient(45deg, #FFD700, #000);
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            margin-bottom: 20px;
+        }
+
+        .button_navigation {
+            background-color: black;
+            border: 2px solid #FFD700;
+            padding: 15px 32px;
+            text-align: center;
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            margin: 10px;
+            cursor: pointer;
+            border-radius: 12px;
+            transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .button_navigation:hover {
+            background: linear-gradient(45deg, #000, #FFD700);
+            color: white;
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(255, 215, 0, 0.6);
+        }
+        
         body, #box, #top {
             display: flex;
             align-items: center;
