--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -133,8 +133,8 @@
         <img src="docs/Logo-light.png" alt="Logo" class="logo">
     </div>
      <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="loadContent.js"></script>
-    <script src="./scripts/navigation.js"></script>
+    <script src="/loadContent.js"></script>
+    <script src="/scripts/navigation.js"></script>
     <div id="box">
         <input type="file" id="input">
         Drag ROM file or click here
