--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
+<body>
+    <div id="top">
+        <h1>EmulatorJS on RCKSTR</h1>
+        <img src="docs/Logo-light.png" alt="Logo" class="logo">
+    </div>
+     <div id="header"></div> <!-- Placeholder for header content -->
+    <script src="loadContent.js"></script>
+    <script src="/scripts/navigation.js"></script>
+</body>
 <head>
+
     <title>EmulatorJS</title>
     <link rel="icon" href="docs/favicon.ico" sizes="16x16 32x32 48x48 64x64" type="image/vnd.microsoft.icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -128,13 +138,7 @@
     </style>
 </head>
 <body>
-    <div id="top">
-        <h1>EmulatorJS on RCKSTR</h1>
-        <img src="docs/Logo-light.png" alt="Logo" class="logo">
-    </div>
-     <div id="header"></div> <!-- Placeholder for header content -->
-    <script src="loadContent.js"></script>
-    <script src="/scripts/navigation.js"></script>
+
     <div id="box">
         <input type="file" id="input">
         Drag ROM file or click here
