--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -8,6 +8,7 @@
      <div id="header"></div> <!-- Placeholder for header content -->
     <script src="/loadContent.js"></script>
     <script src="/scripts/navigation.js"></script>
+	<script src="/settings.js"></script>
 </body>
 <head>
 
