--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -9,6 +9,7 @@
     <script src="/loadContent.js"></script>
     <script src="/scripts/navigation.js"></script>
 	<script src="/settings.js"></script>
+	<link rel="stylesheet" href="/styles.css">
 </body>
 <head>
 
