--- a/emulated_games/index.html
+++ b/emulated_games/index.html
@@ -70,7 +70,7 @@
         }
 
         .frame {
-            position:absolute;
+            position:relative;
             top:0;
             left:0;
             width:70%;
