--- a/emulated_games/index.html
+++ b/emulated_games/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="emulator_container">
-    <center><iframe src="emulatorjs/index.html" class="frame"></iframe></center>
+    <iframe src="emulatorjs/index.html" class="frame"></iframe>
     </div>
     <div id="footer"></div> <!-- Placeholder for footer content -->
 	<script src='/settings.js'></script>
