--- a/emulated_games/index.html
+++ b/emulated_games/index.html
@@ -83,7 +83,7 @@
     <div class="emulator_container">
     <iframe src="emulatorjs/index.html" class="frame"></iframe>
     </div>
-    <div id="footer"></div> <!-- Placeholder for footer content -->
+    <div id="footer"></div> <!-- Placeholder for footer content i guess --> 
 	<script src='/settings.js'></script>
 </body>
 </html>
