--- a/emulated_games/index.html
+++ b/emulated_games/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="emulator_container">
-    <iframe src="emulatorjs/index.html" class="frame"></iframe>
+    <iframe src="emulatorjs/index.html" class="frame" width="100%" height="100%"></iframe>
     </div>
 	<script src='/settings.js'></script>
 </body>
