testing from some random stackoverflow thing

--- a/emulated_games/index.html
+++ b/emulated_games/index.html
@@ -19,6 +19,7 @@
             font-family: Arial, sans-serif;
         }
         .emulator_container {   
+            height: 60em;
             display: flex;
             justify-content: center;
             align-items: center;
