made it work on emulatorjs side

--- a/emulated_games/emulatorjs/index.html
+++ b/emulated_games/emulatorjs/index.html
@@ -9,6 +9,7 @@
                 height: 100%;
                 background-color: black;
                 color: white;
+                background: black;
             }
 
             body {
