--- a/header.html
+++ b/header.html
@@ -68,8 +68,7 @@
             <button class="button_navigation">Utilities <i class="fa fa-caret-down"></i></button>
             <div class="dropdown_content">
                 <button onclick="goto('games')" class="button_navigation">Games</button>
-                <button onclick="goto('star')" class="button_navigation">Star</button>
-                <button onclick="goto('interstellar')" class="button_navigation">Star on RCKSTR</button>
+                <button onclick="goto('interstellar')" class="button_navigation">Star</button>
                 <button onclick="goto('emulator')" class="button_navigation">Emulators</button>
             </div>
         </div>
