--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+	<meta name="description" content="Unbӏocked games for all">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
     <title>RCKSTR x EthanDupe</title>
     <link rel="icon" type="image/x-icon" href="logo.ico">
 </head>
