--- a/games.html
+++ b/games.html
@@ -87,6 +87,9 @@
         <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
+        <img class="game_image" src="./static/rckstr-1-1-edited.png" alt="Game Image"><br>    
+        <a href="./games/rckstrsnake/index.html">RCKSTR Snake</a><br>
+
         <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>   
         <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
 
