updated snake icon

--- a/games.html
+++ b/games.html
@@ -87,8 +87,8 @@
         <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>
         <a href="./games/minecraft152/minecraft152.html">Eaglercraft 1.5.2</a><br>
 
-        <img class="game_image" src="./static/rckstr-1-1-edited.png" alt="Game Image"><br>    
-        <a href="./games/rckstrsnake/index.html">RCKSTR Snake</a><br>
+        <img class= "game_image" src="/static/Snake_OG-logo.jpg" alt="Game Image"><br>
+        <a href="./games/rckstrsnake/index.html">Snake game</a><br>
 
         <img class="game_image" src="./static/eaglecraft.jpg" alt="Game Image"><br>   
         <a href="./games/minecraft188.html">Eaglercraft 1.8.8</a><br>
@@ -116,6 +116,7 @@
 
         <img class="game_image" src="./static/teraria.jpg" alt="Game Image"><br>    
         <a href="./games/TerrariaMP.html">Terraria Multiplayer </a><br>
+
     </div>
 
     <div id="footer"></div> <!-- Placeholder for footer content -->
